--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
     "build": "vite build"
   },
   "dependencies": {
-    "react": "^19",
-    "react-dom": "^19",
-    "@toolpad/core": "0.16.0",
-    "@mui/material": "^7",
-    "@mui/material-nextjs": "^7",
-    "@mui/icons-material": "^7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "zod": "^3.24.2",
+    "@mui/icons-material": "^7",
+    "@mui/material": "^7",
+    "@mui/material-nextjs": "^7",
+    "@react-pdf/renderer": "^4.3.0",
+    "@toolpad/core": "0.16.0",
+    "firebase": "^11",
+    "react": "^19",
+    "react-dom": "^19",
     "react-router": "^7",
-    "firebase": "^11"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
     "@vitejs/plugin-react": "^4.3.2",
+    "eslint": "^8",
+    "typescript": "^5",
     "vite": "^5.4.8"
   }
 }
