feat: Change pdf & add tsconfig & refactor

--- a/package.json
+++ b/package.json
@@ -4,28 +4,36 @@
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@mui/icons-material": "^7",
-    "@mui/material": "^7",
-    "@mui/material-nextjs": "^7",
-    "@react-pdf/renderer": "^4.3.0",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@mui/icons-material": "7.0.0",
+    "@mui/material": "7.0.0",
+    "@mui/material-nextjs": "7.0.0",
+    "@react-pdf/renderer": "4.3.0",
     "@toolpad/core": "0.16.0",
-    "firebase": "^11",
-    "react": "^19",
-    "react-dom": "^19",
-    "react-router": "^7",
-    "zod": "^3.24.2"
+    "firebase": "11.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router": "7.7.1",
+    "zod": "3.24.2"
   },
   "devDependencies": {
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.3.2",
-    "eslint": "^8",
-    "typescript": "^5",
-    "vite": "^5.4.8"
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "8.38.0",
+    "@typescript-eslint/parser": "8.38.0",
+    "@vitejs/plugin-react": "4.3.2",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-no-relative-import-paths": "1.6.1",
+    "eslint-plugin-prettier": "5.5.3",
+    "eslint-plugin-react": "^7.37.5",
+    "prettier": "3.6.2",
+    "typescript": "5.4.5",
+    "vite": "5.4.19"
   }
 }
