--- a/package.json
+++ b/package.json
@@ -8,21 +8,28 @@
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
     "@mui/icons-material": "7.0.0",
     "@mui/material": "7.0.0",
     "@mui/material-nextjs": "7.0.0",
+    "@mui/x-data-grid": "^8.9.1",
+    "@mui/x-date-pickers": "^8.9.0",
+    "@nextgen-ec/react-pdf-selection": "^0.6.22",
     "@react-pdf/renderer": "4.3.0",
     "@toolpad/core": "0.16.0",
+    "date-fns": "^4.1.0",
     "dayjs": "1.11.13",
     "firebase": "11.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router": "7.7.1",
     "zod": "3.24.2"
   },
   "devDependencies": {
+    "@types/invariant": "^2.2.37",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "8.38.0",
