--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "1.11.13",
     "firebase": "11.0.0",
+    "path-to-regexp": "^8.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-markdown": "^10.1.0",
