--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@pages/*": ["pages/*"],
       "@components/*": ["components/*"],
       "@assets/*": ["assets/*"],
-      "@constants/*": ["@constants/*"]
+      "@constants/*": ["@constants/*"],
+      "@types/*": ["@types/*"]
     }
   },
   "include": ["src", "vite-env.d.ts"],
