--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "date-fns": "^4.1.0",
     "dayjs": "1.11.13",
     "firebase": "11.0.0",
+    "framer-motion": "^12.23.12",
     "path-to-regexp": "^8.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-router": "7.7.1",
     "zod": "3.24.2"
