--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,14 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["src/*"],
-      "@datasources/*": ["data/*"],
+      "@datasources/*": ["datasources/*"],
       "@layouts/*": ["layouts/*"],
       "@hooks/*": ["hooks/*"],
       "@utils/*": ["utils/*"],
       "@pages/*": ["pages/*"],
       "@components/*": ["components/*"],
       "@assets/*": ["assets/*"],
-      "@constants/*": ["@constants/*"],
+      "@constants/*": ["constants/*"],
       "@types/*": ["@types/*"]
     }
   },
