--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "vite",
     "preview": "vite preview",
     "build": "vite build",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@date-io/date-fns": "^3.2.1",
@@ -34,6 +36,7 @@
     "zod": "3.24.2"
   },
   "devDependencies": {
+    "@storybook/react-vite": "^9.1.1",
     "@types/invariant": "^2.2.37",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -45,7 +48,10 @@
     "eslint-plugin-no-relative-import-paths": "1.6.1",
     "eslint-plugin-prettier": "5.5.3",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-storybook": "^9.1.1",
+    "msw": "^2.10.4",
     "prettier": "3.6.2",
+    "storybook": "^9.1.1",
     "typescript": "5.4.5",
     "vite": "5.4.19"
   }
