--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-markdown": "^10.1.0",
     "react-router": "7.7.1",
     "react-router-dom": "^7.7.1",
+    "remark-gfm": "^4.0.1",
     "zod": "3.24.2"
   },
   "devDependencies": {
