--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^3.2.1",
-    "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
-    "@mui/icons-material": "7.0.0",
-    "@mui/material": "7.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^7.0.0",
+    "@mui/material": "^7.0.0",
     "@mui/material-nextjs": "7.0.0",
     "@mui/x-data-grid": "^8.9.1",
     "@mui/x-date-pickers": "^8.9.0",
